--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,7 +1,7 @@
 18.6
 -----
 * [**] Block editor: Block inserter indicates newly available block types [https://github.com/wordpress-mobile/gutenberg-mobile/pull/4047]
-
+* [*] Reader post comments: fixed an issue that prevented all comments from displaying. [#17373]
 
 18.5
 -----
