--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -4,6 +4,7 @@
 * [**] Block editor: Block inserter indicates newly available block types [https://github.com/wordpress-mobile/gutenberg-mobile/pull/4047]
 * [*] Reader post comments: fixed an issue that prevented all comments from displaying. [#17373]
 * [**] Stats: added Reader Discover nudge for sites with low traffic in order to increase it. [#17349, #17352, #17354, #17377]
+* [*] Stats Insights: HTML tags no longer display in post titles. [#17380]
 
 18.5
 -----
